--- a/app3-filtering/index.html
+++ b/app3-filtering/index.html
@@ -1,7 +1,15 @@
-<html>
-	<body>
-		Something
-				<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+<html ng-app="myApp">
+	<body ng-controller="myCtrl">
+		<div>
+        Filter: <input type="text" ng-model='filterText'/>
+    </div>
+		<p ng-repeat="myData in newData| filter: filterText">
+			<span>{{myData.name}}</span>
+			<span>{{myData.email}}</span>
+			<span>{{myData.dateEmployed}}</span>
+			<span>{{myData.phone}}</span>
+		</p>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 		<script src="app.js"></script>
 		<script src="controller.js"></script>
 		<script src="service.js"></script>
